feat: impl func to insert data into db
