# rpc-server/internal/domain/blockchain/transaction.go
@@ -1,11 +1,15 @@
 package blockchain
 
-import "time"
+import (
+	"time"
+
+	eth_common "github.com/ethereum/go-ethereum/common"
+)
 
 type Transaction struct {
 	BlockNumber uint64
-	From        string // Sender address
-	To          string // Receiver address
+	From        eth_common.Address // Sender address
+	To          eth_common.Address // Receiver address
 	TxNonce     uint64
 	TxHash      string
 	TxValue     uint64 // amount
